[project]
authors = [
  {name = "Nikolay Kutuzov", email = "kutuzovnp@gmail.com"},
]
description = "Two-photon microscopy particle tracking analysis"
name = "sl2pm"
version = "1.0.0"
readme = "README.md"
requires-python = ">=3.9"
# These are keywords
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
    "numpy==1.26.3",
    "matplotlib==3.8.2",
    "scipy==1.12.0",
    "mpmath==1.3.0",
    "jupyterlab==4.0.12",
    "notebook==7.0.7",
]

[project.urls]
"Bug Tracker" = "https://github.com/drkutuzov/sl2pm/issues"
"Homepage" = "https://github.com/drkutuzov/sl2pm"

[project.optional-dependencies]
docs = [
  "sphinx",
  "sphinx-book-theme",
  "myst-nb",
  "ipywidgets",
  "sphinx-new-tab-link!=0.2.2",
]

[project.scripts]
sl2pm = "sl2pm.__main__:main"

# Configure the Ruff linter: Ignore error number 501
[tool.ruff]
ignore = ["E501"]

[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=64", 
  "setuptools_scm>=8",
]

[tool.setuptools_scm]
# https://setuptools-scm.readthedocs.io/ 
# used to pick up the version from the git tags or the latest commit.
